# smallvector-mi-mpc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.adoc  README.md  small_vector.h  testMain.cpp
src/: smallVector.hpp  small_vector.hpp  small_vector.tpp  testMain.cpp
test/: CMakeLists.txt.gtest.in  gtest_main.cpp  test_small_vector.cpp
